# gcsfs

./: pyproject.toml
gcsfs/: core.py
gcsfs/tests/: test_core.py
gcsfs/tests/recordings/: test_google_metadata.yaml
